[package]
name = "interakt"
description = "Provides the higher order `IO` function `interact` for prototyping command line interfaces."
version = "0.1.1"
authors = ["Max Orok <maxwellorok@gmail.com>"]
repository = "https://github.com/mxxo/interakt"
edition = "2018"
exclude = ["src/bin/*"]
license = "MIT OR Apache-2.0"
